# ecommerce-with-stripe

./: .coverage  .gitignore  Makefile  TEST_RUNNER_README.md  TEST_SUMMARY.md  jest.config.js  package-lock.json  package.json  pyproject.toml  test-runner-api-output.txt  test.py  test_results.json
.github/workflows/: testing.yaml
agent/: blackboxTest.py  stripe_requirements.txt
agent/client/: api.py
components/: CartItem.js  CheckoutButton.js  Layout.js  NavBar.js  Product.js  ShoppingCart.js
pages/: _app.js  index.js  test-runner.js
pages/api/: run-tests.js
scripts/: run-tests.js
tests/: README.md  setup.js  test_blackbox.py  test_new.py  test_ui.py
tests/edge_cases/: Product.test.js
tests/fuzz/: Product.test.js
tests/integration/: Ecommerce.test.js
tests/mutation/: Product.test.js
tests/property_based/: Product.test.js
tests/unit/: CartItem.test.js  CheckoutButton.test.js  Product.test.js  ShoppingCart.test.js  products.test.js
