[project]
name = "src"
version = "0.0.1"
description = "Testing tools for a web app"
authors = [
    {name = "Chino Franco", email = "chino.franco@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "stripe (>=12.3.0,<13.0.0)",
    "selenium (>=4.34.2,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.3"
